8024651: Remove the incorrect usage of Metablock::overhead()

Reviewed-by: brutisso, mgerdin, coleenp, jmasa